--- a/app/views/admin/team_members/edit.html.haml
+++ b/app/views/admin/team_members/edit.html.haml
@@ -48,6 +48,9 @@
     %p.title
       %label Skype
       = f.text_field :skype, :class => 'textbox'
+    %p.title
+      %label Active?
+      = f.check_box :is_active
 
   %p.buttons
     - button_text = @team_member.new_record? ? 'Create' : 'Save changes'
