Added notes for team_members made goals/MVP private

--- a/app/views/admin/team_members/edit.html.haml
+++ b/app/views/admin/team_members/edit.html.haml
@@ -49,6 +49,9 @@
       %label Skype
       = f.text_field :skype, :class => 'textbox'
     %p.title
+      %label Notes
+      = f.text_area :notes, :class => 'textbox'
+    %p.title
       %label Active?
       = f.check_box :is_active
 
